--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ transition: all 1s;
   background: white var( --switch-bg-url) no-repeat center;
   border: 0;
   border-radius: 50%;
-
+animation: slide-out 0.4s ;
   position: absolute;
   top:50%;
  left: 0;
@@ -92,12 +92,10 @@ transition: all 1s;
   z-index: 1;
   transform: translateY(-50%);
  border: 1px solid var(--stroke-color);
- animation: slide-left 0.2s;
   transition: all 0.5s;
 }
 .Light #switch button{
-  right: 0;
-  left: initial;
+  animation: slide-in 0.4s forwards; 
 
 }
 
@@ -184,6 +182,18 @@ footer {
  .Light {
   --bg-url:  url(./assets/bgdesktoplight.jpg);
  }
-
-
+}
+@keyframes slide-in{
+  from {
+    left: o;
+  } to {
+    left: 50%;
+  }
+}
+@keyframes slide-out{
+  from {
+    left: 50%;
+  } to {
+    left: 0%;
+  }
 }
